nvidia-graphics-drivers (418.152.00-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 418.152.00 (2020-06-24).
    * Fixed CVE-2020-5963, CVE-2020-5967.  (Closes: #963766)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5031

 -- Andreas Beckmann <anbe@debian.org>  Mon, 29 Jun 2020 17:55:10 +0200

nvidia-graphics-drivers (418.126.02-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 418.126.02 (2020-02-28).
    - Added support for the following GPU: Quadro T2000 with Max-Q Design.

  [ Andreas Beckmann ]
  * Import drmP.patch from Fedora and port it from 390.xx to 418.xx to fix
    kernel module build for Linux 5.5.  (Closes: #951091)
  * Backport nv_ioremap_nocache changes from 440.64 and nv_proc_ops_t and
    nv_timeval changes from 440.82 to fix kernel module build for Linux 5.6.
    (Closes: #956458)
  * Fix #includes in conftest.sh to fix kernel module build for Linux 5.7,
    thanks to Jiri Palecek.  (Closes: #960735)

 -- Andreas Beckmann <anbe@debian.org>  Sat, 14 Mar 2020 23:08:06 +0100

nvidia-graphics-drivers (418.116.00-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 418.116.00 (2019-12-09).

 -- Andreas Beckmann <anbe@debian.org>  Sat, 14 Dec 2019 14:29:50 +0100

nvidia-graphics-drivers (418.113-1) buster; urgency=medium

  * New upstream long lived branch release 418.113 (2019-11-05).
    - Updated the Module.symvers sanity check, which is part of the NVIDIA
      kernel module build process, to accommodate the recent addition of a
      new field in the Module.symvers file format. This fixes the error
      "The Module.symvers file is missing [...]" seen during driver
      installation or DKMS rebuilds with Linux 5.4 RC kernels.
    - Fixed a bug that prevented NVIDIA GPUs from entering the low-power
      D3 state when entering suspend-to-idle (s2idle). Note that on some
      systems this may expose an existing timing issue in the Linux kernel;